# GameShopPlatformClient

./: .gitignore  CMakeCache.txt  CMakeLists.txt
includes/: authorization.h  contentwindow.h
src/: authorization.cpp  contentwindow.cpp  main.cpp
